--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ h2{
 	text-align: center;
 }
 h3{
-	text-align: center
+	text-align: center;
 }
 	.box0{
-		width: 800px;
+		width: 900px;
        margin: auto;
-       text-align: center
+       text-align: center;
 	}
 
 
