--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h3{
        text-align: center;
 	}
 .p1{
-	width: 800;
+	width: 800px;
        margin:auto;
 }
 body{
@@ -55,7 +55,7 @@ body{
 }
 .box{
 	margin:auto;
-	width:800;
+	width:800px;
 }
 	
 	
